# evalitai

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md
.github/workflows/: ci.yml
apps/api/: Dockerfile  alembic.ini  main.py  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: caed347f1394_initial_schema.py
apps/api/core/: config.py
apps/api/db/: base.py  session.py
apps/api/models/: __init__.py  artifact.py  audit.py  baseline.py  comparison.py  criterion.py  evaluator.py  event.py  metric.py  project.py  result.py  review.py  run.py  suite.py
apps/web/: Dockerfile
infra/: .env.example  docker-compose.yml
